“mi primera confirmación de actualización”

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                 <li>Plataformas</li>
             </ul>
         </div>
+        <div class="greeting">
+            <p>Hola</p>
+        </div>
     </main>
 
 
